[gd_scene load_steps=10 format=2]

[ext_resource path="res://baddies/sprites/tardi1.png" type="Texture" id=1]
[ext_resource path="res://baddies/sprites/tardi2.png" type="Texture" id=2]
[ext_resource path="res://baddies/sprites/tardi5.png" type="Texture" id=3]
[ext_resource path="res://baddies/sprites/tardi4.png" type="Texture" id=4]
[ext_resource path="res://baddies/sprites/tardi3.png" type="Texture" id=5]
[ext_resource path="res://baddies/TurningHack.tscn" type="PackedScene" id=6]
[ext_resource path="res://baddies/characters/TankyBoi.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.1607, 11.4071 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "rush",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "sprint",
"speed": 15.0
} ]

[node name="TankyBoi" type="KinematicBody2D" groups=[
"Baddies",
]]
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0589383, 4.07423 )
shape = SubResource( 1 )

[node name="FrontRayCast" parent="." instance=ExtResource( 6 )]
position = Vector2( -20, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RearRayCast" parent="." instance=ExtResource( 6 )]
position = Vector2( 20, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "rush"
frame = 4
playing = true
flip_h = true
